--- a/Web_Server/fe/package.json
+++ b/Web_Server/fe/package.json
@@ -2,6 +2,7 @@
   "name": "fe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://brl.uiu.ac.bd/SEMal/",
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
