--- a/Web_Server/fe/package.json
+++ b/Web_Server/fe/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-loading-overlay": "^1.0.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
